# GhostGate

./: README.de.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  pyproject.toml
.dev/: journal.md
docs/: demo_script.md  outreach.md
examples/: broken_bot.py
ghostgate/: __init__.py  audit.py  mock.py  policies.py  state.py  types.py  wallet.py
ghostgate/adapters/: __init__.py  eth_account_signer.py  web3_rpc.py
ghostgate/examples/: __init__.py  broken_bot.py
site/: index.html
tests/: test_adapters.py  test_wallet.py
