[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostgate"
version = "0.2.0"
description = "GhostGate -- the circuit breaker between an autonomous bot and a drained wallet. Deterministic policy chain, kill switch, full audit trail."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
web3 = [
    "eth-account>=0.13",
    "web3>=7.0",
]

[tool.setuptools.packages.find]
include = ["ghostgate*"]
